--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,7 +2,11 @@ jdk:
   - openjdk17
 
 install:
-  - ./gradlew :util:publishReleasePublicationToMavenRepository
+  # Step 1: Show all Gradle tasks in the :util module
+  - ./gradlew :util:tasks --all
+
+  # Step 2: Attempt to publish
+  - ./gradlew :util:publishReleasePublicationToMavenRepository --info --stacktrace
 
 build:
   target: util
